@@ -50,8 +50,11 @@ class CHud : public CComponent
 	void RenderSelectorSpectatorHud();
 	void RenderRecord(); //DDRace
 	void RenderPlayerInfo();
+	void RenderPlayersOffScreen();
 
 	virtual void OnMessage(int MsgType, void *pRawMsg);
+	void DrawCircle(float x, float y, float r, int Segments);
+	CUIRect m_PlayableZone;
 	//
 
 	void MapscreenToGroup(float CenterX, float CenterY, struct CMapItemGroup *PGroup);
